--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,10 @@
   --secondary-font-family: "Lato", sans-serif;
 }
 
+body {
+  text-align: center;
+}
+
 h1 {
   font-family: var(--header-font-family);
   font-size: 90px;
@@ -18,4 +22,9 @@ p {
   font-family: var(--secondary-font-family);
   font-weight: bold;
   font-size: 50px;
+}
+
+.hero {
+  background-color: rgb(213, 219, 219, 0.6);
+  padding: 120px 20px;
 }
