--- a/src/styles.css
+++ b/src/styles.css
@@ -24,6 +24,11 @@ p {
   font-size: 50px;
 }
 
+.content {
+  font-family: var(--secondary-font-family);
+  font-size: 20px;
+}
+
 .hero {
   background-color: rgb(213, 219, 219, 0.6);
   padding: 120px 15px;
