--- a/src/styles.css
+++ b/src/styles.css
@@ -33,3 +33,13 @@ p {
   background-color: rgb(213, 219, 219, 0.6);
   padding: 120px 15px;
 }
+
+@media (max-width: 576px) {
+  h1 {
+    font-size: 60px;
+  }
+  h2,
+  p {
+    font-size: 35px;
+  }
+}
