--- a/src/styles.css
+++ b/src/styles.css
@@ -46,10 +46,11 @@ p {
 
 .about-me {
   margin-top: 100px;
+  margin-bottom: 100px;
 }
 
 .about-hero {
-  margin-top: 120px;
+  margin-top: 100px;
   padding-right: 30px;
 }
 .about-me h1 {
