--- a/src/styles.css
+++ b/src/styles.css
@@ -44,6 +44,15 @@ p {
   }
 }
 
+@media (max-width: 576px) {
+  .about-hero .btn {
+    margin-bottom: 30px;
+  }
+  .about-hero h1 {
+    margin-top: -100px;
+  }
+}
+
 .about-me {
   margin-top: 100px;
   margin-bottom: 100px;
