--- a/src/styles.css
+++ b/src/styles.css
@@ -76,3 +76,22 @@ p {
   font-size: 16px;
   font-family: var(--secondary-font-family);
 }
+
+.content-container {
+  margin-top: 100px;
+}
+
+.content h1 {
+  font-size: 64px;
+  font-family: var(--header-font-family);
+  padding-bottom: 50px;
+}
+.content h3 {
+  font-size: 50px;
+  font-family: var(--header-font-family);
+}
+
+.content p {
+  font-size: 20px;
+  font-family: var(--secondary-font-family);
+}
