--- a/src/styles.css
+++ b/src/styles.css
@@ -3,10 +3,23 @@
   --secondary-font-family: "Lato", sans-serif;
 }
 
-body {
-  text-align: center;
+.logo {
+  max-width: 150px;
 }
 
+nav {
+  padding: 20px 60px;
+}
+
+nav ul {
+  padding: 0;
+  margin: 0;
+}
+
+nav li {
+  display: inline;
+  list-style: none;
+}
 h1 {
   font-family: var(--header-font-family);
   font-size: 90px;
