--- a/src/styles.css
+++ b/src/styles.css
@@ -48,6 +48,7 @@ p {
   font-family: var(--secondary-font-family);
   font-weight: bold;
   font-size: 50px;
+  text-align: center;
 }
 
 .content {
@@ -58,6 +59,7 @@ p {
 .hero {
   background-color: rgb(213, 219, 219, 0.6);
   padding: 120px 15px;
+  text-align: center;
 }
 
 @media (max-width: 576px) {
@@ -71,11 +73,14 @@ p {
 }
 
 @media (max-width: 576px) {
+  .about-hero {
+    text-align: center;
+  }
   .about-hero .btn {
     margin-bottom: 30px;
   }
   .about-hero h1 {
-    margin-top: -100px;
+    margin-top: -150px;
   }
 }
 
@@ -115,9 +120,14 @@ p {
 .content h3 {
   font-size: 50px;
   font-family: var(--header-font-family);
+  text-align: center;
 }
 
 .content p {
   font-size: 20px;
   font-family: var(--secondary-font-family);
+}
+
+.contact-btn {
+  text-align: center;
 }
