--- a/src/styles.css
+++ b/src/styles.css
@@ -33,6 +33,31 @@ nav li.active a {
   color: blue;
 }
 
+footer {
+  margin: 60px 0px;
+}
+
+footer .email-link {
+  text-decoration: none;
+  color: black;
+  font-size: 25px;
+}
+
+footer .social-links a {
+  margin: 0 20px;
+  color: black;
+  padding: 10px 14px;
+  font-size: 18px;
+}
+
+footer .social-links a:hover {
+  color: blue;
+}
+
+footer .email-link:hover {
+  color: blue;
+}
+
 h1 {
   font-family: var(--header-font-family);
   font-size: 90px;
