--- a/src/styles.css
+++ b/src/styles.css
@@ -37,6 +37,16 @@ footer {
   margin: 60px 0px;
 }
 
+footer .contact-box {
+  background-color: rgb(213, 219, 219, 0.6);
+  padding: 30px 120px;
+  border-radius: 10px;
+}
+
+footer .contact-box p {
+  font-size: 20px;
+}
+
 footer .email-link {
   text-decoration: none;
   color: black;
@@ -69,6 +79,11 @@ h2 {
   font-size: 40px;
 }
 
+h4 {
+  font-size: 48px;
+  font-family: var(--header-font-family);
+}
+
 p {
   font-family: var(--secondary-font-family);
   font-weight: bold;
@@ -95,9 +110,6 @@ p {
   p {
     font-size: 35px;
   }
-}
-
-@media (max-width: 576px) {
   .about-hero {
     text-align: center;
   }
