--- a/src/styles.css
+++ b/src/styles.css
@@ -37,6 +37,11 @@ footer {
   margin: 60px 0px;
 }
 
+footer p {
+  font-size: 16px;
+  margin-top: 20px;
+}
+
 footer .contact-box {
   background-color: rgb(213, 219, 219, 0.6);
   padding: 30px 120px;
